seaqt/QtCore/gen_qabstracteventdispatcher.nim

import ./qtcore_pkg

{.push raises: [].}

from system/ansi_c import c_free, c_malloc

type
  struct_seaqt_string {.used.} = object
    len: csize_t
    data: pointer

  struct_seaqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_seaqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: struct_seaqt_string): string {.used.} =
  if v.len > 0:
    let len = cast[int](v.len)
    result = newStringUninit(len)
    when nimvm:
      let d = cast[ptr UncheckedArray[char]](v.data)
      for i in 0..<len:
        result[i] = d[i]
    else:
      copyMem(addr result[0], v.data, len)


import ./gen_qabstracteventdispatcher_types
export gen_qabstracteventdispatcher_types

import
  ./gen_qabstractnativeeventfilter_types,
  ./gen_qdeadlinetimer_types,
  ./gen_qmetaobject_types,
  ./gen_qobject,
  ./gen_qobjectdefs_types,
  ./gen_qsocketnotifier_types,
  ./gen_qthread_types
export
  gen_qabstractnativeeventfilter_types,
  gen_qdeadlinetimer_types,
  gen_qmetaobject_types,
  gen_qobject,
  gen_qobjectdefs_types,
  gen_qsocketnotifier_types,
  gen_qthread_types

type cQAbstractEventDispatcher*{.exportc: "QAbstractEventDispatcher", incompleteStruct.} = object
type cQAbstractEventDispatcherV2*{.exportc: "QAbstractEventDispatcherV2", incompleteStruct.} = object
type cQAbstractEventDispatcherTimerInfo*{.exportc: "QAbstractEventDispatcher__TimerInfo", incompleteStruct.} = object
type cQAbstractEventDispatcherTimerInfoV2*{.exportc: "QAbstractEventDispatcher__TimerInfoV2", incompleteStruct.} = object

proc fcQAbstractEventDispatcher_metaObject(self: pointer): pointer {.importc: "QAbstractEventDispatcher_metaObject".}
proc fcQAbstractEventDispatcher_metacast(self: pointer, param1: cstring): pointer {.importc: "QAbstractEventDispatcher_metacast".}
proc fcQAbstractEventDispatcher_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QAbstractEventDispatcher_metacall".}
proc fcQAbstractEventDispatcher_trS(s: cstring): struct_seaqt_string {.importc: "QAbstractEventDispatcher_tr_s".}
proc fcQAbstractEventDispatcher_instance(): pointer {.importc: "QAbstractEventDispatcher_instance".}
proc fcQAbstractEventDispatcher_processEvents(self: pointer, flags: cint): bool {.importc: "QAbstractEventDispatcher_processEvents".}
proc fcQAbstractEventDispatcher_registerSocketNotifier(self: pointer, notifier: pointer): void {.importc: "QAbstractEventDispatcher_registerSocketNotifier".}
proc fcQAbstractEventDispatcher_unregisterSocketNotifier(self: pointer, notifier: pointer): void {.importc: "QAbstractEventDispatcher_unregisterSocketNotifier".}
proc fcQAbstractEventDispatcher_registerTimerQint64_Qt_TimerType_QObject(self: pointer, interval: clonglong, timerType: cint, objectVal: pointer): cint {.importc: "QAbstractEventDispatcher_registerTimer_qint64_Qt_TimerType_QObject".}
proc fcQAbstractEventDispatcher_registerTimerIntQint64_Qt_TimerType_QObject(self: pointer, timerId: cint, interval: clonglong, timerType: cint, objectVal: pointer): void {.importc: "QAbstractEventDispatcher_registerTimer_int_qint64_Qt_TimerType_QObject".}
proc fcQAbstractEventDispatcher_unregisterTimerInt(self: pointer, timerId: cint): bool {.importc: "QAbstractEventDispatcher_unregisterTimer_int".}
proc fcQAbstractEventDispatcher_unregisterTimers(self: pointer, objectVal: pointer): bool {.importc: "QAbstractEventDispatcher_unregisterTimers".}
proc fcQAbstractEventDispatcher_registeredTimers(self: pointer, objectVal: pointer): struct_seaqt_array {.importc: "QAbstractEventDispatcher_registeredTimers".}
proc fcQAbstractEventDispatcher_remainingTimeInt(self: pointer, timerId: cint): cint {.importc: "QAbstractEventDispatcher_remainingTime_int".}
proc fcQAbstractEventDispatcher_unregisterTimer_Qt_TimerId(self: pointer, timerId: cint): bool {.importc: "QAbstractEventDispatcher_unregisterTimer_Qt_TimerId".}
proc fcQAbstractEventDispatcher_timersForObject(self: pointer, objectVal: pointer): struct_seaqt_array {.importc: "QAbstractEventDispatcher_timersForObject".}
proc fcQAbstractEventDispatcher_wakeUp(self: pointer): void {.importc: "QAbstractEventDispatcher_wakeUp".}
proc fcQAbstractEventDispatcher_interrupt(self: pointer): void {.importc: "QAbstractEventDispatcher_interrupt".}
proc fcQAbstractEventDispatcher_startingUp(self: pointer): void {.importc: "QAbstractEventDispatcher_startingUp".}
proc fcQAbstractEventDispatcher_closingDown(self: pointer): void {.importc: "QAbstractEventDispatcher_closingDown".}
proc fcQAbstractEventDispatcher_installNativeEventFilter(self: pointer, filterObj: pointer): void {.importc: "QAbstractEventDispatcher_installNativeEventFilter".}
proc fcQAbstractEventDispatcher_removeNativeEventFilter(self: pointer, filterObj: pointer): void {.importc: "QAbstractEventDispatcher_removeNativeEventFilter".}
proc fcQAbstractEventDispatcher_filterNativeEvent(self: pointer, eventType: struct_seaqt_string, message: pointer, resultVal: ptr uint): bool {.importc: "QAbstractEventDispatcher_filterNativeEvent".}
proc fcQAbstractEventDispatcher_aboutToBlock(self: pointer): void {.importc: "QAbstractEventDispatcher_aboutToBlock".}
proc fcQAbstractEventDispatcher_connect_aboutToBlock(self: pointer, slot: int, callback: proc (slot: int) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QAbstractEventDispatcher_connect_aboutToBlock".}
proc fcQAbstractEventDispatcher_awake(self: pointer): void {.importc: "QAbstractEventDispatcher_awake".}
proc fcQAbstractEventDispatcher_connect_awake(self: pointer, slot: int, callback: proc (slot: int) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QAbstractEventDispatcher_connect_awake".}
proc fcQAbstractEventDispatcher_trSC(s: cstring, c: cstring): struct_seaqt_string {.importc: "QAbstractEventDispatcher_tr_s_c".}
proc fcQAbstractEventDispatcher_trSCN(s: cstring, c: cstring, n: cint): struct_seaqt_string {.importc: "QAbstractEventDispatcher_tr_s_c_n".}
proc fcQAbstractEventDispatcher_instanceThread(thread: pointer): pointer {.importc: "QAbstractEventDispatcher_instance_thread".}
proc fcQAbstractEventDispatcher_protectedbase_sender(self: pointer): pointer {.importc: "QAbstractEventDispatcher_protectedbase_sender".}
proc fcQAbstractEventDispatcher_protectedbase_senderSignalIndex(self: pointer): cint {.importc: "QAbstractEventDispatcher_protectedbase_senderSignalIndex".}
proc fcQAbstractEventDispatcher_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QAbstractEventDispatcher_protectedbase_receivers".}
proc fcQAbstractEventDispatcher_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QAbstractEventDispatcher_protectedbase_isSignalConnected".}
proc fcQAbstractEventDispatcher_staticMetaObject(): pointer {.importc: "QAbstractEventDispatcher_staticMetaObject".}
proc fcQAbstractEventDispatcherV2_metaObject(self: pointer): pointer {.importc: "QAbstractEventDispatcherV2_metaObject".}
proc fcQAbstractEventDispatcherV2_metacast(self: pointer, param1: cstring): pointer {.importc: "QAbstractEventDispatcherV2_metacast".}
proc fcQAbstractEventDispatcherV2_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QAbstractEventDispatcherV2_metacall".}
proc fcQAbstractEventDispatcherV2_trS(s: cstring): struct_seaqt_string {.importc: "QAbstractEventDispatcherV2_tr_s".}
proc fcQAbstractEventDispatcherV2_unregisterTimer(self: pointer, timerId: cint): bool {.importc: "QAbstractEventDispatcherV2_unregisterTimer".}
proc fcQAbstractEventDispatcherV2_timersForObject(self: pointer, objectVal: pointer): struct_seaqt_array {.importc: "QAbstractEventDispatcherV2_timersForObject".}
proc fcQAbstractEventDispatcherV2_processEventsWithDeadline(self: pointer, flags: cint, deadline: pointer): bool {.importc: "QAbstractEventDispatcherV2_processEventsWithDeadline".}
proc fcQAbstractEventDispatcherV2_trSC(s: cstring, c: cstring): struct_seaqt_string {.importc: "QAbstractEventDispatcherV2_tr_s_c".}
proc fcQAbstractEventDispatcherV2_trSCN(s: cstring, c: cstring, n: cint): struct_seaqt_string {.importc: "QAbstractEventDispatcherV2_tr_s_c_n".}
proc fcQAbstractEventDispatcherV2_protectedbase_sender(self: pointer): pointer {.importc: "QAbstractEventDispatcherV2_protectedbase_sender".}
proc fcQAbstractEventDispatcherV2_protectedbase_senderSignalIndex(self: pointer): cint {.importc: "QAbstractEventDispatcherV2_protectedbase_senderSignalIndex".}
proc fcQAbstractEventDispatcherV2_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QAbstractEventDispatcherV2_protectedbase_receivers".}
proc fcQAbstractEventDispatcherV2_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QAbstractEventDispatcherV2_protectedbase_isSignalConnected".}
proc fcQAbstractEventDispatcherV2_staticMetaObject(): pointer {.importc: "QAbstractEventDispatcherV2_staticMetaObject".}
proc fcQAbstractEventDispatcherTimerInfo_timerId(self: pointer): cint {.importc: "QAbstractEventDispatcher__TimerInfo_timerId".}
proc fcQAbstractEventDispatcherTimerInfo_setTimerId(self: pointer, timerId: cint): void {.importc: "QAbstractEventDispatcher__TimerInfo_setTimerId".}
proc fcQAbstractEventDispatcherTimerInfo_interval(self: pointer): cint {.importc: "QAbstractEventDispatcher__TimerInfo_interval".}
proc fcQAbstractEventDispatcherTimerInfo_setInterval(self: pointer, interval: cint): void {.importc: "QAbstractEventDispatcher__TimerInfo_setInterval".}
proc fcQAbstractEventDispatcherTimerInfo_timerType(self: pointer): cint {.importc: "QAbstractEventDispatcher__TimerInfo_timerType".}
proc fcQAbstractEventDispatcherTimerInfo_setTimerType(self: pointer, timerType: cint): void {.importc: "QAbstractEventDispatcher__TimerInfo_setTimerType".}
proc fcQAbstractEventDispatcherTimerInfo_new(id: cint, i: cint, t: cint): ptr cQAbstractEventDispatcherTimerInfo {.importc: "QAbstractEventDispatcher__TimerInfo_new_id_i_t".}
proc fcQAbstractEventDispatcherTimerInfo_new2(fromVal: pointer): ptr cQAbstractEventDispatcherTimerInfo {.importc: "QAbstractEventDispatcher__TimerInfo_new_from".}
proc fcQAbstractEventDispatcherTimerInfoV2_timerId(self: pointer): cint {.importc: "QAbstractEventDispatcher__TimerInfoV2_timerId".}
proc fcQAbstractEventDispatcherTimerInfoV2_setTimerId(self: pointer, timerId: cint): void {.importc: "QAbstractEventDispatcher__TimerInfoV2_setTimerId".}
proc fcQAbstractEventDispatcherTimerInfoV2_timerType(self: pointer): cint {.importc: "QAbstractEventDispatcher__TimerInfoV2_timerType".}
proc fcQAbstractEventDispatcherTimerInfoV2_setTimerType(self: pointer, timerType: cint): void {.importc: "QAbstractEventDispatcher__TimerInfoV2_setTimerType".}
proc fcQAbstractEventDispatcherTimerInfoV2_operatorAssign(self: pointer, fromVal: pointer): void {.importc: "QAbstractEventDispatcher__TimerInfoV2_operatorAssign".}
proc fcQAbstractEventDispatcherTimerInfoV2_new(fromVal: pointer): ptr cQAbstractEventDispatcherTimerInfoV2 {.importc: "QAbstractEventDispatcher__TimerInfoV2_new_from".}
proc fcQAbstractEventDispatcherTimerInfoV2_new2(): ptr cQAbstractEventDispatcherTimerInfoV2 {.importc: "QAbstractEventDispatcher__TimerInfoV2_new".}

proc metaObject*(self: gen_qabstracteventdispatcher_types.QAbstractEventDispatcher): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQAbstractEventDispatcher_metaObject(self.h), owned: false)

proc metacast*(self: gen_qabstracteventdispatcher_types.QAbstractEventDispatcher, param1: cstring): pointer =
  fcQAbstractEventDispatcher_metacast(self.h, param1)

proc metacall*(self: gen_qabstracteventdispatcher_types.QAbstractEventDispatcher, param1: cint, param2: cint, param3: pointer): cint =
  fcQAbstractEventDispatcher_metacall(self.h, cint(param1), param2, param3)
